# fraud-detection-platform

./: .gitignore  Makefile  README.md  pyproject.toml
apps/python_dashboard/: server.py
apps/react_dashboard/: README.md  index.html  package.json
apps/react_dashboard/src/: App.jsx  styles.css
data/sample/: smoke_transactions.csv
infra/docker/: Dockerfile.api  Dockerfile.dashboard  docker-compose.yml
infra/terraform/: main.tf  outputs.tf  user_data.sh.tftpl  variables.tf
services/fraud_platform/src/fraud_platform/: __init__.py  cli.py  config.py  schemas.py
services/fraud_platform/src/fraud_platform/api/: app.py  server.py  service.py
services/fraud_platform/src/fraud_platform/data/: public_dataset.py  sample_data.py
services/fraud_platform/src/fraud_platform/drift/: __init__.py  cusum.py
services/fraud_platform/src/fraud_platform/ml/: preprocessing.py  tracker.py  training.py
services/fraud_platform/src/fraud_platform/storage/: event_store.py  model_registry.py
services/fraud_platform/src/fraud_platform/streaming/: __init__.py  contracts.py  kafka_producer.py  simulator.py  spark_job.py
services/fraud_platform/src/fraud_platform/utils/: __init__.py  prereqs.py  risk.py
tests/integration/: test_demo_flow.py
tests/unit/: test_data_pipeline.py  test_drift.py  test_training.py
